stylesheets/Tako.animations.styl
ARTICLE_ZERO_TIME        = 10ms
ARTICLE_ANIMATION2D_TIME = 500ms
ARTICLE_ANIMATION3D_TIME = 1000ms
SECTION_ZERO_TIME        = 10ms
SECTION_ANIMATION2D_TIME = 1500ms
SECTION_ANIMATION3D_TIME = 1000ms
body > article
  transform-origin 100% 100%
  animation-duration ARTICLE_ANIMATION2D_TIME
  vendor(animation-timing-function, cubic-bezier(0.465, 0.330, 0.440, 0.950))

  // &:not([data-direction])
  //   &:not(.active)
  //     display none

  &:not([data-animation]), &[data-animation=fade]
    &:not([data-direction])
      &:not(.active)
        opacity 0
    &[data-direction="out"], &[data-direction="back-out"]
      animation-name fade_out
    &[data-direction="in"], &[data-direction="back-in"]
      animation-name fade_in
    &.active
      opacity 1

  // Animation SLIDE
  &[data-animation="slide"]
    &[data-direction="in"]
      animation-name slide_in
    &[data-direction="out"]
      animation-name slide_out
    &[data-direction="back-in"]
      animation-name slide_back_in
    &[data-direction="back-out"]
      animation-name slide_back_out

  &[data-animation="cover"]
    &[data-direction="in"]
      animation-name cover_in
      z-index ARTICLE_INDEX_ACTIVE
    &[data-direction="out"]
      animation-name cover_out
      z-index ARTICLE_INDEX_OUT
    &[data-direction="back-in"]
      animation-name cover_back_in
      z-index ARTICLE_INDEX_ACTIVE
    &[data-direction="back-out"]
      animation-name cover_back_out
      z-index ARTICLE_INDEX_OUT

  // Animation ROOM
  &[data-animation="room"]
    animation-duration ARTICLE_ANIMATION3D_TIME
    &[data-direction="in"]
      animation-name room_in
      transform-origin 0 50%
    &[data-direction="out"]
      animation-name room_out
      transform-origin 100% 50%
    &[data-direction="back-in"]
      animation-name room_back_in
      transform-origin 100% 50%
    &[data-direction="back-out"]
      animation-name room_back_out
      transform-origin 0 50%

  // Animation CUBE
  &[data-animation="cube"]
    vendor(animation-duration, ARTICLE_ANIMATION3D_TIME)
    &[data-direction="in"]
      animation-name cube_in
      transform-origin 0 50%
    &[data-direction="out"]
      animation-name cube_out
      transform-origin 100% 50%
    &[data-direction="back-in"]
      animation-name cube_back_in
      transform-origin 100% 50%
    &[data-direction="back-out"]
      animation-name cube_back_out
      transform-origin 0 50%

body > article > section
  transform-origin 100% 100%
  vendor(animation-duration, SECTION_ANIMATION2D_TIME)
  // vendor(animation-timing-function, cubic-bezier(0.465, 0.330, 0.440, 0.950))

  &[data-timing="0"]
    vendor(animation-duration, SECTION_ZERO_TIME !important)

  &:not([data-direction])
    &:not(.active)
      display none

  &[data-direction]
    position absolute
    left 0
    right 0
    display inline-block

  &:not([data-animation])
    vendor(animation-duration, SECTION_ZERO_TIME !important)
    &:not([data-direction])
      &:not(.active)
        opacity 0
    &[data-direction="out"], &[data-direction="back-out"]
      animation-name fade_out
    &[data-direction="in"], &[data-direction="back-in"]
      animation-name fade_in
    &.active
      opacity 1

  &[data-animation=fade]
    &:not([data-direction])
      &:not(.active)
        opacity 0
    &[data-direction="out"], &[data-direction="back-out"]
      animation-name fade_out
    &[data-direction="in"], &[data-direction="back-in"]
      animation-name fade_in
    &.active
      opacity 1

  // Animation SLIDE
  &[data-animation="slide"]
    &[data-direction="in"]
      animation-name slide_in
    &[data-direction="out"]
      animation-name slide_out
    &[data-direction="back-in"]
      animation-name slide_back_in
    &[data-direction="back-out"]
      animation-name slide_back_out

  &[data-animation="cover"]
    &[data-direction="in"]
      animation-name cover_in
      z-index ARTICLE_INDEX_ACTIVE
    &[data-direction="out"]
      animation-name cover_out
      z-index ARTICLE_INDEX_OUT
    &[data-direction="back-in"]
      animation-name cover_back_in
      z-index ARTICLE_INDEX_ACTIVE
    &[data-direction="back-out"]
      animation-name cover_back_out
      z-index ARTICLE_INDEX_OUT

  // Animation ROOM
  &[data-animation="room"]
    animation-duration SECTION_ANIMATION3D_TIME
    &[data-direction="in"]
      animation-name room_in
      transform-origin 0 50%
    &[data-direction="out"]
      animation-name room_out
      transform-origin 100% 50%
    &[data-direction="back-in"]
      animation-name room_back_in
      transform-origin 100% 50%
    &[data-direction="back-out"]
      animation-name room_back_out
      transform-origin 0 50%

  // Animation CUBE
  &[data-animation="cube"]
    animation-duration SECTION_ANIMATION3D_TIME
    &[data-direction="in"]
      animation-name cube_in
      transform-origin 0 50%
    &[data-direction="out"]
      animation-name cube_out
      transform-origin 100% 50%
    &[data-direction="back-in"]
      animation-name cube_back_in
      transform-origin 100% 50%
    &[data-direction="back-out"]
      animation-name cube_back_out
      transform-origin 0 50%

//SPECIFIC CASES

body[data-version="2.3"]
  & > article
    &[data-animation="room"], &[data-animation="cube"]
      animation-duration ARTICLE_ANIMATION2D_TIME
    & > section
      &[data-animation="room"], &[data-animation="cube"]
        animation-duration SECTION_ANIMATION2D_TIME
  & > article, & > article > section
    &[data-animation="room"], &[data-animation="cube"]
      animation-duration SECTION_ANIMATION2D_TIME
      &[data-direction="in"]
        animation-name slide_in
      &[data-direction="out"]
        animation-name slide_out
      &[data-direction="back-in"]
        animation-name slide_back_in
      &[data-direction="back-out"]
        animation-name slide_back_out

@media screen and (min-device-width : 768px) and (orientation : landscape)
  body > article > section
    &[data-animation=slide], &[data-animation=room], &[data-animation=cube]
      animation-duration SECTION_ANIMATION2D_TIME
      &:not([data-direction])
        &:not(.active)
          opacity 0
      &[data-direction="out"], &[data-direction="back-out"]
        animation-name fade_out
      &[data-direction="in"], &[data-direction="back-in"]
        animation-name fade_in
      &.active
        opacity 1

// Keyframes FADE
@keyframes fade_in
  0%
    opacity 0
  100%
    opacity 1

@keyframes fade_out
  0%
    opacity 1
  100%
    opacity 0

// Keyframes SLIDE
@keyframes slide_in
  0%
    vendor(transform, translateX(100%))
  100%
    vendor(transform, translateX(0))

@keyframes slide_out
  0%
    vendor(transform, translateX(0))
  100%
    vendor(transform, translateX(-100%))

@keyframes slide_back_in
  0%
    vendor(transform, translateX(-100%))
  100%
    vendor(transform, translateX(0))

@keyframes slide_back_out
  0%
    vendor(transform, translateX(0))
  100%
    vendor(transform, translateX(100%))

// Keyframes COVER
@keyframes cover_in
  0%
    vendor(transform, translate(0, 100%))
  100%
    vendor(transform, translate(0, 0))

@keyframes cover_out
  0%
    vendor(transform, translate(0, 0))
  100%
    vendor(transform, translate(0, 0))

@keyframes cover_back_in
  0%
    vendor(transform, translate(0, -100%))
  100%
    vendor(transform, translate(0, 0))

@keyframes cover_back_out
  0%
    vendor(transform, translate(0, 0))
  100%
    vendor(transform, translate(0, 0))


DEFAULT_DEGREES = 85deg

// Keyframes ROOM
@keyframes room_in
  0%
    vendor(transform, translateX(100%) rotateY(-(DEFAULT_DEGREES)))
  100%
    vendor(transform, translateX(0))

@keyframes room_out
  0%
    vendor(transform, translateX(0))
  100%
    vendor(transform, translateX(-100%) rotateY(DEFAULT_DEGREES))

@keyframes room_back_in
  0%
    vendor(transform, translateX(-100%) rotateY(DEFAULT_DEGREES))
  100%
    vendor(transform, translateX(0))

@keyframes room_back_out
  0%
    vendor(transform, translateX(0))
  100%
    vendor(transform, translateX(100%) rotateY(-(DEFAULT_DEGREES)))

// Keyframes CUBE
@keyframes cube_in
  0%
    vendor(transform, translateX(100%) rotateY(DEFAULT_DEGREES))
  100%
    vendor(transform, translateX(0))

@keyframes cube_out
  0%
    vendor(transform, translateX(0))
  100%
    vendor(transform, translateX(-100%) rotateY(-(DEFAULT_DEGREES)))

@keyframes cube_back_in
  0%
    vendor(transform, translateX(-100%) rotateY(-(DEFAULT_DEGREES)))
  100%
    vendor(transform, translateX(0))

@keyframes cube_back_out
  0%
    vendor(transform, translateX(0))
  100%
    vendor(transform, translateX(100%) rotateY(DEFAULT_DEGREES))

